--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 
 
 .new-parent{
-    border:2px solid green;
+    /* border:2px solid green; */
     display: grid;
     grid-auto-flow: row;
     gap:5em;
