--- a/style.css
+++ b/style.css
@@ -1,23 +1,44 @@
-.videoRecommendations{
-
-    overflow:auto;
-    height: 30em;    
+.videoRecommendations::-webkit-scrollbar{
+    width: 1em;    
+}
+.commentBox::-webkit-scrollbar {
+    width: 1em;
 }
 
-.commentBox{
+.videoRecommendations::-webkit-scrollbar-track{
+    background-color: white;
+}
+.commentBox::-webkit-scrollbar-track {
+    background-color: white;
+}
+
+.videoRecommendations::-webkit-scrollbar-thumb{
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+.commentBox::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.videoRecommendations {
+
+    overflow: auto;
+    height: 30em;
+}
+
+.commentBox {
 
     overflow: auto;
     height: 50em;
 }
 
 
-.new-parent{
+.new-parent {
 
     display: grid;
     grid-auto-flow: row;
-    gap:5em;
+    gap: 5em;
     overflow: auto;
-    padding:0;
-    z-index:1000;
+    padding: 0;
+    z-index: 1000;
 
 }
