--- a/style.css
+++ b/style.css
@@ -6,10 +6,10 @@
 }
 
 .videoRecommendations::-webkit-scrollbar-track{
-    background-color: white;
+    background-color: rgb(85, 83, 83);
 }
 .commentBox::-webkit-scrollbar-track {
-    background-color: white;
+    background-color: rgb(85, 83, 83);
 }
 
 .videoRecommendations::-webkit-scrollbar-thumb{
@@ -19,26 +19,26 @@
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
-.videoRecommendations {
-
-    overflow: auto;
-    height: 30em;
+.videoRecommendations{
+    overflow:auto;
 }
 
-.commentBox {
-
+.commentBox{
     overflow: auto;
-    height: 50em;
+    border-bottom: 3px solid rgb(99, 98, 98);;
 }
 
 
-.new-parent {
-
+.new-parent{
+    border:3px solid rgb(99, 98, 98);
+    border-radius: 5px;
+    box-sizing: border-box;  
     display: grid;
-    grid-auto-flow: row;
-    gap: 5em;
-    overflow: auto;
-    padding: 0;
-    z-index: 1000;
+    padding:1em;
+    /* grid-template-columns: repeat(1,1fr); */
+    grid-template-rows: repeat(1,2fr 1fr);
+    gap:1em;
+    height: 100vh;
+    z-index:1000;
 
 }
