--- a/style.css
+++ b/style.css
@@ -21,11 +21,19 @@
 }
 
 .videoRecommendations{
+
     overflow:auto;
+    resize: vertical;
+    height: 50%;
+    max-height: 100vh;
+
 }
 
 .commentBox{
+    resize: vertical;
     overflow: auto;
+    height: 50%;
+    max-height: 100vh;
     border-bottom: 3px solid rgb(99, 98, 98);;
 }
 
@@ -34,11 +42,14 @@
     border:3px solid rgb(92, 92, 92);
     border-radius: 5px;
     box-sizing: border-box;  
-    display: grid;
+    display: flex;
+    flex-direction: column;
+    /* display: grid;
+    grid-template-rows: repeat(2,1fr); */
     padding:1em;
-    grid-template-rows: repeat(2,1fr);
     gap:1em;
     height: 100vh;
+    max-height: 100vh;
     z-index:1000;
 
 }
